# cgal_triangle

./: Cargo.toml  README.md  build.rs
include/: triangle.cpp  triangle.h
src/: main.rs
