[package]
name = "cargoCGAL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
egui = "0.18"
eframe = "0.18"
egui_winit_platform = "0.13"
winit = "0.24"
[build-dependencies]
cxx-build = "1.0"
